# session-sampling-simulator

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  RELNOTES.md  pyproject.toml
.github/workflows/: workflow.yml
session_sampling_simulator/: __main__.py  cli.py  default_queries.py  example_queries.py  gui.py  session_simulator.py
session_sampling_simulator/analysis/: total_duration.py
test_session_sampling_simulator/: test_session_simulator.py
