[project]
name = "session-sampling-simulator"
version = "0.1.0post1"
description = "An application/library for simulating the sampling of Postgres session states."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "humanize>=4.11.0",
    "matplotlib>=3.9.2",
    "numpy>=2.1.2",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "typer>=0.12.5",
]

[project.scripts]
sesasim = "session_sampling_simulator.__main__:app"

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"